--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <ul>    
-        <li><a href="aulas/aula2.html">Aula 1 - Adivinhar um número</a></li>
+        <li><a href="Exercicios/exercicio_1/index.html">Aula 1 - Adivinhar um número</a></li>
+        <li><a href="Exercicios/exercicio_2/index.html">Aula 2 - Adivinhar um número</a></li>
 
-        <li><a href="aulas/aula2.html">Aula 2 - Horario por extenso</a></li>
-        <li><a href="aulas/aula2.html">Aula 2 - Relogio com segundos</a></li>
+        <li><a href="Exercicios/exercicio_3/index.html">Aula 3 - Adivinhar um número</a></li>
+        <li><a href="Exercicios/exercicio_4/index.html">Aula 4 - Adivinhar um número</a></li>
     </ul>
 </body>
 </html>
