feature: aula 3 incompleto

--- a/Exercicios/exercicio_5/index.html
+++ b/Exercicios/exercicio_5/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="#" method="post" >
-        <input type="text" placeholder="Texto" id="txtbox" name="txtbox"></input>
-        <button type="submit" id="btVerificar">Verificar</button>
-    </form>
-    <script src="script.js"></script>
+    <label id="txtarray"> Array: </label>
+
+    <label for="valor">Valor: </label>
+    <input type="text" id="valor" name="valor"> </input>
+    <button type="submit" id="btnAdicionar">Adicionar</button>
+    <p id="lista">
+    </p>
 </body>
 </html>
