--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=ul">
-    <title>Document</title>
+    <title>Exercicios</title>
 </head>
 <body>
     <ul>    
-        <li><a href="Exercicios/exercicio_1/index.html">Aula 1 - Adivinhar um número</a></li>
-        <li><a href="Exercicios/exercicio_2/index.html">Aula 2 - Adivinhar um número</a></li>
-
-        <li><a href="Exercicios/exercicio_3/index.html">Aula 3 - Adivinhar um número</a></li>
-        <li><a href="Exercicios/exercicio_4/index.html">Aula 4 - Adivinhar um número</a></li>
+        <li><a href="Exercicios/exercicio_1/index.html">Exercicio 1 - Adivinhar um número</a></li>
+        <li><a href="Exercicios/exercicio_2/index.html">Exercicio 2 - Data</a></li>
+        <li><a href="Exercicios/exercicio_3/index.html">Exercicio 3 - Relógio</a></li>
+        <li><a href="Exercicios/exercicio_4/index.html">Exercicio 4 - Palíndromo</a></li>
     </ul>
 </body>
 </html>
