--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="Exercicios/exercicio_2/index.html">Exercicio 2 - Data</a></li>
         <li><a href="Exercicios/exercicio_3/index.html">Exercicio 3 - Relógio</a></li>
         <li><a href="Exercicios/exercicio_4/index.html">Exercicio 4 - Palíndromo</a></li>
+        <li><a href="Exercicios/exercicio_5/index.html">Exercicio 4 - Palíndromo</a></li>
     </ul>
 </body>
 </html>
