--- a/Exercicios/exercicio_4/index.html
+++ b/Exercicios/exercicio_4/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="#" method="post" >
+    <form>
         <input type="text" placeholder="Texto" id="txtbox" name="txtbox"></input>
         <button type="submit" id="btVerificar">Verificar</button>
     </form>
