--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <li><a href="Exercicios/exercicio_2/index.html">Exercicio 2 - Data</a></li>
         <li><a href="Exercicios/exercicio_3/index.html">Exercicio 3 - Relógio</a></li>
         <li><a href="Exercicios/exercicio_4/index.html">Exercicio 4 - Palíndromo</a></li>
-        <li><a href="Exercicios/exercicio_5/index.html">Exercicio 4 - Palíndromo</a></li>
+        <li><a href="Exercicios/exercicio_5/index.html">Exercicio 5 - Letreiro</a></li>
+        <li><a href="Exercicios/exercicio_6/index.html">Exercicio 6 - Array</a></li>
     </ul>
 </body>
 </html>
