--- a/Exercicios/exercicio_6/index.html
+++ b/Exercicios/exercicio_6/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Array</title>    
 </head>
 <body>
@@ -9,8 +10,7 @@
         <label for="valor">Valor </label>
         <input type="text" id="valor" name="valor"> </input>
         <button type="submit" id="btnAdicionar">Adicionar</button>
-        <p class="position" id="lista"></p>
     </div>
-    <script type="text/javascript" src="script.js" async></script>
+    <script type="text/javascript" src="javascript.js" async></script>
 </body>
 </html>
